<?xml version="1.0"?>
<package>
  <name>rose_gui_application</name>
  <version>0.0.0</version>
  <description>The rose_gui_application package</description>

  <maintainer email="langen@robot-rose.nl">mathijs</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>qt4</build_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscomm</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rose_common</build_depend>
  <build_depend>rose_joystick</build_depend> 
  <build_depend>rose_ui_item_selector</build_depend>
  <build_depend>rose_ui_map_display</build_depend> 
  <build_depend>rose_ui_script_selector</build_depend>
  <build_depend>rose_shared_variables</build_depend>
  <build_depend>tinyxml</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>qt4</run_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscomm</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rose_common</run_depend>
  <run_depend>rose_conversions</run_depend>
  <run_depend>rose_joystick</run_depend>
  <run_depend>rose_ui_item_selector</run_depend>
  <run_depend>rose_ui_map_display</run_depend>
  <run_depend>rose_ui_script_selector</run_depend>
  <run_depend>rose_shared_variables</run_depend>
  <run_depend>tinyxml</run_depend>

  <export>
  </export>
</package>
